--- a/contact.html
+++ b/contact.html
@@ -18,16 +18,16 @@
         }
         .image img{
             margin-top: 3rem;
-            width: 12rem;
+            width: 15rem;
             background-image: url(Capture.JPG);
         }
         .image{
             
         }
         .details{
-            font-size: 0.9rem;
+            font-size: 1rem;
             font-family: sans-serif;
-            padding: 3px;
+            padding: 4px;
         }
         .details button{
             background-color: rgb(88, 199, 88);
@@ -37,12 +37,16 @@
             border: none;
             outline: none;
             width: 12rem;
-            margin-top: 5px;
+            height: 2rem;
+            margin-top: 15px;
         }
         .details p{
             padding: 1.5px;
         }
-
+        .icons img{
+            width: 4.5rem;
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
@@ -65,6 +69,13 @@
             <a href="https://wa.me/+918080125309"><button>Whatsapp Me</button></a>
         </center>
     </div>
+    <center>
+        <div class="icons">
+            <a href="https://www.facebook.com/aditya.ekhande.140/"><img src="facebook.jpg" alt=""></a>
+            <a href="https://www.instagram.com/aditya_ekhande_/"><img src="insta.jpg" alt=""></a>
+            <a href="https://twitter.com/aditya_ekhande"><img src="twitter.jpg" alt=""></a>
+        </div>
+    </center>
     
 </body>
 </html>
