--- a/contact.html
+++ b/contact.html
@@ -10,11 +10,12 @@
             padding: 0;
             margin: 0;
         }
-        header{
+        .header {
             font-size: 1.2rem;
             padding: 10px;
             font-family: sans-serif;
             font-weight: bold;
+            margin-top: 10px;
         }
         .image img{
             margin-top: 3rem;
@@ -50,14 +51,11 @@
     </style>
 </head>
 <body>
-    <header>
+    <div class="header">
         <p>
-            ADITYA
+            ADITYA EKHADNE
         </p>
-        <p>
-            EKHADNE
-        </p>
-    </header>
+    <div>
     <div class="image">
         <center><img src="Capture.JPG" alt=""></center>
     </div>
