--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
 <body>
     <div class="header">
         <p>
-            ADITYA EKHADNE
+            Aniket Ghayal
         </p>
     <div>
     <div class="image">
