--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
 <body>
     <div class="header">
         <p>
-            Aniket Ghayal
+            ADITYA EKHANDE
         </p>
     <div>
     <div class="image">
